src/styles/Mint.css
.mint-viewer {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items:center;
    justify-content: center;
    text-align: center;
    height: 93vh;
}

.image-mint {
    width: 300px;
    margin-top: -100px;
}

.mint-viewer > h1 {
    font-family: 'Articulat.CF-V3-Heavy';
    font-size: 70px;
    width: max(350px, 50%);
    text-align: center;
}

.mint-button {
    border: none;
    background-color: white;
    font-family: 'Articulat.CF-V3-Heavy';
    font-size: 21px;
    border-radius: 2px;
    padding: 6px;
    margin: 10px;
    text-align: center;
    cursor: pointer;
}

.error {
    color: rgb(235, 83, 83)
}

.statusText {
    text-align: center;
    width: 350px;
    font-size: 20px;
    height: 100px;
}

@media only screen and (max-width: 1080px) {
    .mint-viewer > h1 {
        font-family: 'Articulat.CF-V3-Heavy';
        font-size: 55px;
        width: max(350px, 50%);
        text-align: center;
    }
  }

